versioned_docs/version-1.5/dankmaterialshell/nixos.mdx
---
title: NixOS Installation
description: Install and configure DankMaterialShell on NixOS using native nixpkgs
sidebar_position: 3
---

import Hero from '@site/src/components/Hero';

<Hero
  asciiArt={`██████╗ ███╗   ███╗███████╗
██╔══██╗████╗ ████║██╔════╝
██║  ██║██╔████╔██║███████╗
██║  ██║██║╚██╔╝██║╚════██║
██████╔╝██║ ╚═╝ ██║███████║
╚═════╝ ╚═╝     ╚═╝╚══════╝`}
  hideTitle={true}
/>

DankMaterialShell can be installed on NixOS using the NixOS module. This guide covers the native nixpkgs installation method.

## Installation

### 1. Enable DankMaterialShell

In your NixOS configuration, enable DankMaterialShell:

```nix
programs.dms-shell.enable = true;
```

That's it! Rebuild your system and DankMaterialShell will be installed with sensible defaults.

## Configuration Options

DankMaterialShell provides numerous configuration options to customize your installation. Here are the main options:

### Feature Toggles

```nix
programs.dms-shell = {
  enable = true;

  systemd = {
    enable = true;             # Systemd service for auto-start
    restartIfChanged = true;   # Auto-restart dms.service when dms-shell changes
  };
  
  # Core features
  enableSystemMonitoring = true;     # System monitoring widgets (dgop)
  enableVPN = true;                  # VPN management widget
  enableDynamicTheming = true;       # Wallpaper-based theming (matugen)
  enableAudioWavelength = true;      # Audio visualizer (cava)
  enableCalendarEvents = true;       # Calendar integration (khal)
};
```

### Custom Quickshell Package

If you need a specific version of Quickshell:

```nix
programs.dms-shell = {
  enable = true;
  quickshell.package = pkgs.quickshell; # or your custom package
};
```

#### Using Quickshell from Source

:::info

This is not a necessary step. Currently, Quickshell's latest release, v0.3.0 covers every feature needed by DankMaterialShell, setting it from source will lead to bigger compilation times.

:::

To use Quickshell from source, add it as a flake input:

```nix
{
  inputs = {
    nixpkgs.url = "github:NixOS/nixpkgs/nixos-26.05";
    
    quickshell = {
      url = "git+https://git.outfoxxed.me/quickshell/quickshell";
      inputs.nixpkgs.follows = "nixpkgs";
    };
  };
}
```

Then use it in your configuration:

```nix
programs.dms-shell = {
  enable = true;
  quickshell.package = inputs.quickshell.packages.${pkgs.stdenv.hostPlatform.system}.quickshell;
};
```

### Using Flake Package with NixOS Module

You can use the package from the DankMaterialShell flake while still using the native NixOS module. This allows you to get quicker updates while keeping the module configuration:

First, add the flake input to your `flake.nix`:

```nix
{
  inputs = {
    nixpkgs.url = "github:NixOS/nixpkgs/nixos-26.05";
    
    dms = {
      url = "github:AvengeMedia/DankMaterialShell/stable";
      inputs.nixpkgs.follows = "nixpkgs";
    };
  };
}
```

:::tip[Using the -git Version]
If you want to use the -git version from the master branch for quicker updates, remove `/stable` from the URL:
```nix
dms.url = "github:AvengeMedia/DankMaterialShell";
```
However, be aware that the -git version may not work properly and could contain breaking changes. The documentation may not reflect the latest changes in the -git version.
:::

Then use the flake package with the native module:

```nix
programs.dms-shell = {
  enable = true;
  package = inputs.dms.packages.${pkgs.stdenv.hostPlatform.system}.default;
};
```

:::warning

When using the flake package with the native nixpkgs module, some dependencies may not be automatically enabled by default, and certain configurations might be missing. You may need to manually install optional dependencies or adjust feature toggles to match your needs.

:::

### Plugins

Install DankMaterialShell plugins declaratively. There are two methods:

#### Method 1: Using the Plugin Registry (Recommended)

The [dms-plugin-registry](https://github.com/AvengeMedia/dms-plugin-registry) flake provides all community plugins as packages with daily updates. This is the simplest way to install plugins.

First, add the plugin registry as a flake input:

```nix
{
  inputs = {
    nixpkgs.url = "github:NixOS/nixpkgs/nixos-26.05";
    
    dms-plugin-registry = {
      url = "github:AvengeMedia/dms-plugin-registry";
      inputs.nixpkgs.follows = "nixpkgs";
    };
  };
}
```

Then import the module and enable plugins:

```nix
{
  imports = [ inputs.dms-plugin-registry.nixosModules.default ];

  programs.dms-shell = {
    enable = true;

    plugins = {
      # Simply enable plugins by their ID (from the registry)
      dankBatteryAlerts.enable = true;
      dockerManager.enable = true;
    };
  };
}
```

The plugin IDs can be found in the [plugin store](https://danklinux.com/plugins) - it's the last part of the install URL. For example, `dms://plugin/install/dankBatteryAlerts` has the ID `dankBatteryAlerts`.

#### Method 2: Manual Installation from Source

If you don't want to use the registry flake, you can install plugins manually by providing the source:

```nix
programs.dms-shell = {
  enable = true;

  plugins = {
    dockerManager = {
      src = pkgs.fetchFromGitHub {
        owner = "LuckShiba";
        repo = "DmsDockerManager";
        rev = "v1.2.0";
        sha256 = "sha256-VoJCaygWnKpv0s0pqTOmzZnPM922qPDMHk4EPcgVnaU=";
      };
    };
    anotherPlugin = {
      enable = true;
      src = pkgs.another-plugin;
    };
  };
};
```

## Compositor Config Files

The NixOS module installs DMS but doesn't generate compositor-specific config files (keybinds, colors, layout, etc.). Use [`dms setup`](cli-setup) to deploy the defaults for your compositor, or generate individual configs:

```bash
# Deploy all defaults
dms setup

# Or pick and choose
dms setup binds
dms setup colors
dms setup layout
```

See the [Setup CLI reference](cli-setup) for the full list of subcommands.

## Lock Screen Authentication (PAM)

On NixOS, `/etc/pam.d` is generated by the module system, so DMS's automatic PAM management does not apply to the lock screen. It validates passwords against `/etc/pam.d/login` by default, and your system PAM policy stays authoritative. Declare `security.pam.services.dankshell` only if you want to override that password stack (for example, to add faillock).

For security-key (FIDO2/U2F) unlock, the bundled fallback cannot load `pam_u2f` on NixOS, so declare the dedicated key-only service DMS looks for:

```nix
security.pam.services."dankshell-u2f".text = ''
  auth     required ${pkgs.pam_u2f}/lib/security/pam_u2f.so cue
  account  required pam_permit.so
'';
```

DMS uses `/etc/pam.d/dankshell-u2f` automatically when present. Restart DMS after the rebuild that first adds it, register your key in `~/.config/Yubico/u2f_keys` (via `pamu2fcfg`), then enable **Security key authentication** in Settings → Lock Screen. See [Lock Screen Authentication](lock-screen-authentication) for how the OR/AND factor modes work.

:::tip[DMS Flake Module]
If you use the NixOS module from the DMS flake, a single option declares the same service for you:

```nix
programs.dank-material-shell.lockscreen.securityKey.enable = true;
```

Use `lockscreen.securityKey.moduleArgs` to change the pam_u2f arguments (default `[ "cue" ]`) and `lockscreen.securityKey.package` to override the pam_u2f package.
:::

## Advanced Configuration

For a complete list of available options, check [the module file](https://github.com/NixOS/nixpkgs/blob/nixos-26.05/nixos/modules/programs/wayland/dms-shell.nix) in nixpkgs.

## Rebuilding

After making configuration changes, rebuild your system:

```bash
sudo nixos-rebuild switch
```

## Troubleshooting

### DMS doesn't start automatically

Make sure you have `systemd.enable = true` set:

```nix
programs.dms-shell = {
  enable = true;
  systemd.enable = true;
};
```

### Missing dependencies

Each feature has its own dependency set. If a feature isn't working, ensure the corresponding `enable` option is set to `true`.

## Next Steps

- Configure your preferences via [Themes](application-themes)
- Set up compositor keybindings in [Keybinds & IPC](keybinds-ipc)
- Extend functionality with [Plugins](plugins-overview)
